# vega-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  download_models.py  main.py  mcp_server.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  automation.py  browser.py  code.py  email.py  finance.py  health.py  image.py  job.py  memory_agent.py  planner.py  research.py  resume.py  study.py  system_monitor.py  video.py
api/: __init__.py
automation/: __init__.py  browser.py  vision.py
config/: settings.yaml
core/: __init__.py  command_core.py  event_bus.py  evolution.py  logger.py
memory/: __init__.py  init_db.py  rag.py
models/: __init__.py  router.py
scheduler/: __init__.py
scripts/: install.bat  install_browser.bat  install_mcp.bat  install_qwen3.bat  install_video_deps.bat  install_voice.bat  restart.bat  start.bat
security/: __init__.py
skills/: __init__.py
skills/builtins/: coding_assistant.py  job_search.py  resume_builder.py  study_planner.py  video_generator.py
tests/: test_core.py  test_integration.py
tools/: __init__.py  cli.py  file_watcher.py  setup_keys.py
ui/: __init__.py
ui/static/sounds/boot/: System - Pop Up Sound Effect ｜ Solo leveling [K6hPM5xedkw].webm
ui/templates/: hud.html
voice/: __init__.py
